# allocine-sentiment-analysis

./: .gitignore  README.md  environment.yml  requirements.txt
cfg/: baseline.yml  conv3s.yml  conv5.yml  conv5p.yml  convomgs.yml  expanded.yml
data/es/: mapping_movie.json
data/json/: movie_additional.json  movie_ids.json  stopwords.json
nnet/: dataset.py  run.py  scoring.py
nnet/models/: cnn.py
pytorch_old/: dataset.py  nlp.py  run.py
pytorch_old/models/: cnn.py
scrapper/: Cargo.toml  movie_additional.json  movies_additional.json
scrapper/src/: main.rs
scripts/: Transformer.ipynb  create_dataset.py  dataset.ipynb  exp.ipynb  jarod_exp.ipynb  keras.ipynb  model.ipynb  processing.ipynb  upload.sh  utils.py
src/py/: const.py  create_dataset.py  gen.py  keras_exp.ipynb  md_run.py  parser.py  run.py  score.py  utils.py
src/py/model/: cnn_baseline.py  cnn_expanded.py  conv1dmod.py  conv1dpar.py  conv1dseq.py  conv_mod.py  conv_par.py  conv_seq.py  mlpcnn.py
src/py/models/: cnn.py
src/sh/: fix_test.sh
