[package]
name = "scrapper"
version = "0.1.0"
authors = ["chaanks <jarod8405@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["macros", "rt-threaded", "time"] }

select = { version = "0.5" }